tests/baselines/reference/privateIndexer2.errors.txt
==== tests/cases/compiler/privateIndexer2.ts (7 errors) ====
    // private indexers not allowed
    
    var x = {
        private [x: string]: string;
                ~
!!! error TS1005: ':' expected.
                  ~
!!! error TS1005: ',' expected.
                           ~
!!! error TS1005: ',' expected.
                                   ~
!!! error TS1005: ':' expected.
                    ~~~~~~
!!! error TS2095: Could not find symbol 'string'.
    }
    ~
!!! error TS1008: Unexpected token; 'module, class, interface, enum, import or statement' expected.
    
    var y: {
        private[x: string]: string;
               ~
!!! error TS1005: ';' expected.
    }